--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -48,7 +48,7 @@
         "id": "9JlerN3Rl_dM"
       },
       "source": [
-        "data = pd.read_csv(\"/content/Book1.csv\")"
+        "data = pd.read_csv(\"/content/Data.csv\")"
       ],
       "execution_count": 7,
       "outputs": []
